[package]
name = "berastribute"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.9.2", features = ["full", "signer-keystore", "sol-types", "contract"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }

## misc
clap = { version = "4.5.26", features = ["derive"] }
eyre = "0.6.12"
serde = "1.0.217"
serde_derive = "1.0.217"
rpassword = "7.3.1"
futures-util = "0.3.31"
reqwest = "0.12.12"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
config = "0.15.6"
lazy_static = "1.5.0"

